--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,7 +32,9 @@ body {
 
 /* Vertical Navbar Styling */
 #main-navbar {
-    width: 275px;
+    width: 285px;
+    max-width: 285px;
+    min-width: 285px;
     background-color: var(--background-color-dark);
     height: 100vh;
     overflow-y: auto;
@@ -72,7 +74,7 @@ body {
     color: var(--text-color);
     font-size: 1.3rem;
     font-weight: bold;
-    padding-left: 1rem;
+    padding-left: 1.2rem;
     display: flex;
     align-items: center;
 }
