--- a/static/css/base.css
+++ b/static/css/base.css
@@ -142,7 +142,8 @@ body {
     font-size: 3.5rem;
     font-family: "Comfortaa", monospace;
     color: var(--text-color);
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
+    margin-top: 20%;
 }
 
 .auth-container {
