--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
               {% if request.user.is_authenticated %}
                 <!-- First set of nav items -->
                 <li class="nav-item">
-                  <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-regular fa-gauge"></i> My Dashboard</a>
+                  <a class="nav-link mx-3" href="{% url 'dashboard' %}"><i class="fa-sharp fa-regular fa-gauge"></i> My Dashboard</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-solid fa-route"></i> My Paths</a>
